"Apply Visual Transform to Pose" Offsets bone unpredictably #38251

Closed
opened 2014-01-16 22:43:06 +01:00 by Sam Brubaker · 9 comments

Version: 2.69 official release (Linux x64)

ApplyTransformBug.blend

How to reproduce: Select bone, hit Ctrl + A > "Apply Visual Transform to Pose", watch as the bone goes somewhere other than the visual transform. Repeat the action and the bone again moves to a different place. This problem persists whether the bone has any active constraints or not; it only needs a non-zero starting point.

Expected behaviour: When "Apply Visual Transform to Pose" is applied to a constrained bone, that bone should remain in the same place when the constraint is turned to 0 (hence the term "visual" transform). If the bone has no constraints, nothing should happen. Instead, the bone gets moved all over the place in ways that don't make sense. If this is somehow intentional, I can't fathom how it could possibly be useful to the user.

Version: 2.69 official release (Linux x64) [ApplyTransformBug.blend](https://archive.blender.org/developer/F69474/ApplyTransformBug.blend) How to reproduce: Select bone, hit Ctrl + A > "Apply Visual Transform to Pose", watch as the bone goes somewhere other than the visual transform. Repeat the action and the bone again moves to a different place. This problem persists whether the bone has any active constraints or not; it only needs a non-zero starting point. Expected behaviour: When "Apply Visual Transform to Pose" is applied to a constrained bone, that bone should remain in the same place when the constraint is turned to 0 (hence the term "visual" transform). If the bone has no constraints, nothing should happen. Instead, the bone gets moved all over the place in ways that don't make sense. If this is somehow intentional, I can't fathom how it could possibly be useful to the user.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @rocketman

Added subscriber: @rocketman

Added subscriber: @brecht

Added subscriber: @brecht

I can confirm the issue, even when removing the constraints using this tool changes the bone location and rotation for no apparent reason.

I can confirm the issue, even when removing the constraints using this tool changes the bone location and rotation for no apparent reason.
Bastien Montagne self-assigned this 2014-01-20 22:47:18 +01:00

Bah, bones nightmare again…

Indeed, current code seems to miss quite a few things! I already fixed the location issue, but it is still rotating (90° each time), don’t know why yet…

Bah, bones nightmare again… Indeed, current code seems to miss quite a few things! I already fixed the location issue, but it is still rotating (90° each time), don’t know why yet…

This issue was referenced by blender/blender-addons-contrib@be87a65f49

This issue was referenced by blender/blender-addons-contrib@be87a65f49300deeb598983e42a1783f6812eba7

This issue was referenced by be87a65f49

This issue was referenced by be87a65f49300deeb598983e42a1783f6812eba7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit be87a65f49.

Closed by commit be87a65f49.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38251
No description provided.