Fix T38251: "Apply Visual Transform to Pose" Offsets bone unpredictably

Code here was using pchan->chan_mat, which for some reason does not work,
we rather have to use pchan->pose_mat, and convert it again from
pose space to bone space, as done by visual keyframing.